--- a/package.json
+++ b/package.json
@@ -13,9 +13,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@convex-dev/resend": "^0.1.7",
+    "@hookform/resolvers": "^5.2.0",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "clsx": "^2.1.1",
     "convex": "^1.23.0",
+    "convex-helpers": "^0.1.100",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.61.1",
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.0.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
