--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "@hookform/resolvers": "^5.2.0",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@react-email/components": "^0.3.3",
+    "@react-email/render": "^1.1.4",
+    "@react-email/tailwind": "^1.2.2",
     "clsx": "^2.1.1",
     "convex": "^1.23.0",
     "convex-helpers": "^0.1.100",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-email": "^4.2.5",
     "react-hook-form": "^7.61.1",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.0.10"
