--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -27,5 +27,5 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src"]
+  "include": ["src", "convex/emails/**/*.ts", "convex/emails/**/*.tsx", "convex/convex.config.ts"]
 }
